<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_active_events"
        android:icon="@drawable/upcoming"
        android:title="@string/active_events" />

    <item
        android:id="@+id/nav_past_events"
        android:icon="@drawable/pass"
        android:title="@string/past_events" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/about" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />

</menu>
